manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: allabout-ogawa-kubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          name: app
          ports:
            - name: http
              containerPort: 80
