manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: allabout-ogawa-kubernetes
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  type: NodePort
