manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: allabout-ogawa-kubernetes
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "allabout-ogawa-kubernetes-ip"
    networking.gke.io/managed-certificates: cert
spec:
  defaultBackend:
    service:
      name: service
      port:
        number: 8080
